02-helm-deployments/Deployments/KTA 7.9/Scenario 3 - ImagePullSecret/deployment_ktawebapp_nolicense_wSecret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kta-deployment
  namespace: kta  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kta-webapp
  template:
    metadata:
      labels:
        app: kta-webapp
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": windows
      containers:
      - name: ktawebapp
        image: sampleacr.azurecr.io/ktawebappnolicense:v7.9
        resources:
          requests:
            cpu: '1'
            memory: 4Gi
          limits:
            cpu: '2'
            memory: 4Gi
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /TotalAgility/Services/SDK/ServerService.svc
            port: 80
          periodSeconds: 3
          timeoutSeconds: 60
      imagePullSecrets:
      - name: kofaxcoe-secret
---
apiVersion: v1
kind: Service
metadata:
  name: kta-webapp-service  
  namespace: kta  
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: kta-webapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kta-ingress
  namespace: kta
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-path: "/TotalAgility/Services/SDK/ServerService.svc"
spec:
  rules:
    - http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: kta-webapp-service
                port: 
                  number: 80
